<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">curriculum table</string>
    <string name="username">用户名:</string><string name="action_settings">Settings</string>
    <string name="usernameHint">输入您的学号</string><string name="passwordInput">密码：</string><string name="login">登录</string><string name="talk">聊天</string><string name="title">课程表</string><string name="editClock">添加闹铃</string><string name="logout">退出</string>
    
    
    
    
    
    
   
</resources>
